samples/_failures_safe/1761140868_0e1ba3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1703aefc.c: In function ‘analyze_text’:
./samples/SAFE/__tmp_1703aefc.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
